# cc-switch-server

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  README.md  UI_PARITY_PLAN.md  UPSTREAM_IMPORT.md  build.rs  build.sh  install.sh  run.sh
.github/workflows/: build-release.yml
assets/contract/: desktop-ui-sync.json  openai-oauth-protocol.json  provider-compatibility-window.json  provider-coverage.json  provider-field-consumption.json  provider-legacy-behavior.json  provider-registry.json  provider-writer-inventory.json  router-provider-channel-baseline.json  server-provider-legacy-inventory.json  upstream-provider-source-baseline.json  web-runtime-contract.json
assets/wordlists/: client-subdomain-words.txt
deploy/: cc-switch-server.service
docs/: architecture-refactor-plan.md  code-agent-regression-matrix.json  code-agent-regression-matrix.md  code-audit-gap-plan.md  deployment.md  manual-ui-checklist.md  provider-coverage.json  provider-coverage.md  real-acceptance-runbook.md  remote-debugging.md  router-market-acceptance.md  server-data-migration.md  server-desktop-ui-parity-plan.md  transform-coverage.md  usage-token-accounting.md  web-runtime-contract.json  web-terminal-ops-shell-adr.md
docs/provider-fixtures/: README.md
scripts/: audit-provider-coverage.mjs  audit-transform-coverage.mjs  audit-ui-provider-matrix.mjs  audit-web-dist-size.mjs  audit-web-i18n-literals.mjs  audit-web-runtime-contract.mjs  backup-restore-smoke.sh  code-agent-regression.sh  deployment-smoke.sh  direct-market-diagnostics.sh  evidence-redaction-check.sh  export-current-cc-switch-fixtures.mjs  import-desktop-export.mjs  oauth-readiness-check.sh  real-acceptance-env-check.sh  release-readiness.sh  router-market-smoke.sh  scan-upstream-changes.mjs  share-market-grant-smoke.sh  static-checks.sh  sync-desktop-ui.mjs  validate-local.sh  write-acceptance-evidence.mjs
scripts/audit/: audit-css-transition-layer.mjs  audit-provider-coverage.mjs  audit-provider-phase0-contracts.mjs  audit-server-product-boundary.mjs  audit-transform-coverage.mjs  audit-ui-provider-matrix.mjs  audit-upstream-provider-baseline.mjs  audit-web-dist-size.mjs  audit-web-i18n-literals.mjs  audit-web-runtime-contract.mjs  evidence-redaction-check.sh  provider-baseline.test.mjs  provider-phase0-contracts.test.mjs  server-product-boundary.test.mjs  split-transition-css.mjs  validate-local.sh
scripts/bootstrap/: server-init-http.sh  server-init-local.sh
scripts/smoke/: code-agent-matrix-summary.mjs  code-agent-regression.sh  deployment-smoke.sh  direct-market-diagnostics.sh  oauth-readiness-check.sh  real-acceptance-env-check.sh  router-market-smoke.sh  share-market-grant-smoke.sh  smoke-local.sh  stream-probe.mjs
scripts/sync/: build-web.sh  export-current-cc-switch-fixtures.mjs  import-desktop-export.mjs  sync-desktop-ui.mjs  sync-desktop-ui.test.mjs
src/: admin.rs  build_info.rs  cli.rs  client_tunnel_provision.rs  codex_identity.rs  coverage.rs  http.rs  lib.rs  main.rs  metrics.rs  provider_identity.rs  setup.rs  state.rs  web_runtime.rs
src/api/: accounts.rs  backup.rs  debug.rs  error.rs  events.rs  (+14 more)
tests/: api_contract.rs  us04_lease_payload_contract.rs
web-dist/: index.html
web-src/: components.json  index.html  package-lock.json  package.json  tailwind.config.cjs  tsconfig.json  vite.config.ts
(+714 files in other folders)
