[package]
name = "cc-switch-server"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
anyhow = "1"
argon2 = "0.5"
async-stream = "0.3"
async-trait = "0.1"
axum = { version = "0.7", features = ["ws"] }
base64 = "0.22"
bytes = "1"
chacha20poly1305 = { version = "0.10", features = ["std"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
clap = { version = "4", features = ["derive", "env"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
futures-util = "0.3"
flate2 = "1"
http = "1"
http-body = "1"
http-body-util = "0.1"
hyper = { version = "1", features = ["full"] }
hyper-rustls = { version = "0.27", default-features = false, features = ["http1", "http2", "tls12", "ring", "webpki-tokio"] }
hyper-util = { version = "0.1", features = ["tokio", "http1", "http2", "client-legacy"] }
hex = "0.4"
hmac = "0.12"
jsonwebtoken = "9"
metrics = "0.24"
metrics-exporter-prometheus = { version = "0.17", default-features = false }
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls-webpki-roots", "socks", "stream"] }
rusqlite = { version = "0.32", features = ["bundled"] }
russh = { version = "0.46", default-features = false, features = ["flate2"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
sha2 = "0.10"
sha3 = "0.10"
thiserror = "1"
tokio = { version = "1", features = ["io-util", "macros", "net", "process", "rt-multi-thread", "signal", "sync", "time"] }
tokio-tungstenite = { version = "0.24", default-features = false, features = ["rustls-tls-webpki-roots"] }
tower-http = { version = "0.5", features = ["cors", "fs", "trace"] }
twox-hash = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tower = "0.5"
